--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "url": "ssh://meixuguang@icode.baidu.com:8235/baidu/atom/ts2php"
   },
   "author": "meixuguang",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "@types/node": "^10.12.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.3"
+  }
 }
