--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "meixuguang",
   "license": "UNLICENSED",
   "dependencies": {
+    "@types/lodash": "^4.14.117",
     "@types/node": "^10.12.0",
+    "lodash": "^4.17.11",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.3"
   }
