--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "echo \"Please implement your build script and modify scripts.build section in package.json\" && exit 1"
+    "build": "echo \"Please implement your build script and modify scripts.build section in package.json\" && exit 1",
+    "sync": "sync-files -w ./typescript.d.ts ./node_modules/typescript/lib/typescript.d.ts"
   },
   "repository": {
     "type": "git",
@@ -16,6 +17,7 @@
     "@types/lodash": "^4.14.117",
     "@types/node": "^10.12.0",
     "lodash": "^4.17.11",
+    "sync-files": "^1.0.3",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.3"
   }
