--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash": "^4.14.117",
     "@types/node": "^10.12.0",
     "lodash": "^4.17.11",
+    "mocha": "^5.2.0",
     "sync-files": "^1.0.3",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.3"
