--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "echo \"Please implement your build script and modify scripts.build section in package.json\" && exit 1",
-    "sync": "sync-files -w ./typescript.d.ts ./node_modules/typescript/lib/typescript.d.ts"
+    "build": "tsc",
+    "sync": "sync-files -w ./typescript.d.ts ./node_modules/typescript/lib/typescript.d.ts",
+    "test": "npm run build && mocha",
+    "mocha": "mocha"
   },
   "repository": {
     "type": "git",
