--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "author": "meixuguang",
   "license": "UNLICENSED",
   "dependencies": {
-    "@types/lodash": "^4.14.117",
-    "@types/node": "^10.12.0",
     "lodash": "^4.17.11",
-    "mocha": "^5.2.0",
-    "sync-files": "^1.0.3",
-    "ts-node": "^7.0.1",
     "typescript": "^3.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/lodash": "^4.14.117",
+    "@types/node": "^10.12.0",
+    "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "mocha": "^5.2.0",
+    "sync-files": "^1.0.3",
+    "ts-node": "^7.0.1"
+  }
 }
