--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "author": "meixuguang",
   "license": "UNLICENSED",
   "dependencies": {
+    "hash-sum": "^1.0.2",
     "lodash": "^4.17.11",
-    "typescript": "^3.1.3"
+    "typescript": "3.1.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.117",
