--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "author": "meixuguang",
   "license": "UNLICENSED",
   "dependencies": {
+    "fs-extra": "^7.0.1",
     "hash-sum": "^1.0.2",
     "lodash": "^4.17.11",
     "typescript": "3.1.3"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.5",
     "@types/lodash": "^4.14.117",
     "@types/node": "^10.12.0",
     "koa": "^2.6.2",
