--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@baidu/ts2php",
-  "version": "0.0.2",
+  "name": "ts2php",
+  "version": "0.0.1-alpha.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://meixuguang@icode.baidu.com:8235/baidu/atom/ts2php"
+    "url": "ssh://git@icode.baidu.com:8235/baidu/atom/ts2php"
   },
   "author": "meixuguang",
   "license": "UNLICENSED",
