--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1-alpha.1",
   "description": "",
   "main": "dist/index.js",
+  "typings": "types/index.d.ts",
   "scripts": {
     "build": "tsc",
     "sync": "sync-files -w ./typescript.d.ts ./node_modules/typescript/lib/typescript.d.ts",
