--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fs-extra": "^7.0.1",
     "hash-sum": "^1.0.2",
     "lodash": "^4.17.11",
-    "typescript": "3.1.3"
+    "typescript": "^3.1.6"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.5",
