chore: remove sample

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && mkdir -p dist/runtime && cp src/runtime/*.php dist/runtime",
     "sync": "sync-files -w ./typescript.d.ts ./node_modules/typescript/lib/typescript.d.ts",
     "test": "tsc && mocha",
-    "mocha": "mocha"
+    "mocha": "mocha",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
