--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts2php",
-  "version": "0.0.1-alpha.10",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "typings": "types/index.d.ts",
