--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^7.0.1",
     "hash-sum": "^1.0.2",
     "lodash": "^4.17.11",
+    "ts-morph": "^1.3.3",
     "typescript": "^3.1.6"
   },
   "nyc": {
@@ -61,6 +62,7 @@
     "nyc": "^13.3.0",
     "source-map-support": "^0.5.11",
     "sync-files": "^1.0.3",
-    "ts-node": "^7.0.1"
+    "ts-node": "^7.0.1",
+    "vue": "^2.6.10"
   }
 }
