--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,15 @@ install:
 
 script:
   - npm test
+
+after_script:
+  - npm run doc
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  local_dir: docs
+  github_token: $GITHUB_TOKEN # a token generated on github allowing travis to push code on you repository
+  keep_history: true
+  on:
+    branch: master
