--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ php:
 env:
   - NOTE_RELEASE=8.x
 
+cache:
+  directories:
+    - ~/.npm
+
 before_install:
   - sudo rm -rf ~/.nvm - curl -sL "https://deb.nodesource.com/setup_${NODE_RELEASE}" | sudo -E bash -
   - sudo apt-get install -y nodejs
