--- a/package.json
+++ b/package.json
@@ -55,10 +55,18 @@
     "sourceMap": true,
     "instrument": true
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "devDependencies": {
+    "@commitlint/cli": "^7.1.2",
+    "@commitlint/config-conventional": "^7.1.2",
     "@types/fs-extra": "^5.0.5",
     "@types/lodash": "^4.14.123",
     "@types/node": "^10.14.4",
+    "husky": "^1.0.1",
     "istanbul": "^0.4.5",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
