--- a/package.json
+++ b/package.json
@@ -65,9 +65,26 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      ["@semantic-release/changelog", {
+        "changelogFile": "CHANGELOG.md",
+        "changelogTitle": "# Changelog"
+      }],
+      "@semantic-release/npm",
+      "@semantic-release/git"
+    ]
+  },
   "devDependencies": {
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
+    "@semantic-release/changelog": "^3.0.2",
+    "@semantic-release/commit-analyzer": "^6.1.0",
+    "@semantic-release/git": "^7.0.8",
+    "@semantic-release/npm": "^5.1.4",
+    "@semantic-release/release-notes-generator": "^7.1.4",
     "@types/fs-extra": "^5.0.5",
     "@types/lodash": "^4.14.123",
     "@types/node": "^10.14.4",
@@ -80,6 +97,7 @@
     "mocha": "^5.2.0",
     "nyc": "^13.3.0",
     "rimraf": "^2.6.3",
+    "semantic-release": "^15.13.3",
     "source-map-support": "^0.5.12",
     "sync-files": "^1.0.3",
     "ts-node": "^7.0.1",
