--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "coverage": "nyc _mocha",
     "prepublishOnly": "npm test && npm run build",
     "test:feature": "ts-node ./src/bin/ts2php.ts",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "doc": "typedoc --out docs --theme minimal --includeDeclarations --excludeNotExported --excludeExternals --mode file ./types/index.d.ts"
   },
   "repository": {
@@ -65,27 +66,14 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "release": {
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git"
-    ],
-    "branch": "master"
-  },
   "devDependencies": {
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
-    "@semantic-release/changelog": "^3.0.2",
-    "@semantic-release/commit-analyzer": "^6.1.0",
-    "@semantic-release/git": "^7.0.8",
-    "@semantic-release/npm": "^5.1.7",
-    "@semantic-release/release-notes-generator": "^7.1.4",
     "@types/fs-extra": "^5.0.5",
     "@types/lodash": "^4.14.123",
     "@types/node": "^10.14.4",
+    "conventional-changelog": "^3.1.3",
+    "conventional-changelog-cli": "^2.0.12",
     "husky": "^1.3.1",
     "istanbul": "^0.4.5",
     "koa": "^2.7.0",
