--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "dependencies": {
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
-    "ts-morph": "^1.3.3",
-    "typescript": "^3.4.5",
-    "yargs": "^13.2.2"
+    "ts-morph": "^2.3.0",
+    "typescript": "3.4.5",
+    "yargs": "^13.2.4"
   },
   "nyc": {
     "include": [
@@ -67,11 +67,11 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.1.2",
-    "@commitlint/config-conventional": "^7.1.2",
-    "@types/fs-extra": "^5.0.5",
-    "@types/lodash": "^4.14.123",
-    "@types/node": "^10.14.4",
+    "@commitlint/cli": "^7.6.1",
+    "@commitlint/config-conventional": "^7.6.0",
+    "@types/fs-extra": "^5.1.0",
+    "@types/lodash": "^4.14.132",
+    "@types/node": "^10.14.7",
     "conventional-changelog": "^3.1.3",
     "conventional-changelog-cli": "^2.0.12",
     "husky": "^1.3.1",
@@ -81,11 +81,11 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mocha": "^6.1.4",
-    "nyc": "^14.1.0",
+    "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "source-map-support": "^0.5.12",
     "sync-files": "^1.0.3",
-    "ts-node": "^8.1.0",
+    "ts-node": "^8.2.0",
     "typedoc": "^0.14.2",
     "vue": "^2.6.10"
   }
