--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "rootDir": "./src",
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "removeComments": false
+    "sourceMap": true,
+    "skipLibCheck": true
   }
 }
