feat: php runtime unit test

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "coverage": "nyc _mocha",
     "prepublishOnly": "npm test && npm run build",
     "test:feature": "ts-node ./src/bin/ts2php.ts",
+    "test:runtime": "sh ./test/runtime/run.sh",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "doc": "typedoc --out docs --theme minimal --includeDeclarations --excludeNotExported --excludeExternals --mode file ./types/index.d.ts"
   },
