--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
     "ts-morph": "^2.3.0",
-    "typescript": "3.4.5",
+    "typescript": "~3.4.5",
     "yargs": "^13.2.4"
   },
   "nyc": {
