--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts2php",
-  "version": "0.10.8",
-  "description": "",
+  "version": "0.10.9",
+  "description": "TypeScript to PHP Transpiler",
   "main": "dist/index.js",
   "typings": "types/index.d.ts",
   "bin": {
