--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "src/**/*.ts"
   ],
   "compilerOptions": {
-    "declaration": false,
+    "declaration": true,
     "target": "es6",
     "module": "commonjs",
     "lib": ["es2016", "es2017"],
