--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
     "ts-morph": "^2.3.0",
-    "typescript": "~3.4.5",
     "yargs": "^13.2.4"
   },
   "nyc": {
@@ -67,6 +66,9 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
+  "peerDependencies": {
+    "typescript": "~3.4.5"
+  },
   "devDependencies": {
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
@@ -75,6 +77,7 @@
     "@types/node": "^10.14.7",
     "conventional-changelog": "^3.1.3",
     "conventional-changelog-cli": "^2.0.12",
+    "typescript": "~3.4.5",
     "husky": "^1.3.1",
     "istanbul": "^0.4.5",
     "koa": "^2.7.0",
