--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.14",
+    "semver": "^6.2.0",
     "ts-morph": "^3.1.0",
     "yargs": "^13.2.4"
   },
