--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts2php",
-  "version": "0.11.3",
+  "version": "0.12.0-0",
   "description": "TypeScript to PHP Transpiler",
   "main": "dist/index.js",
   "typings": "types/index.d.ts",
