--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts2php",
-  "version": "0.12.1",
+  "version": "0.13.0-beta.0",
   "description": "TypeScript to PHP Transpiler",
   "main": "dist/index.js",
   "typings": "types/index.d.ts",
@@ -32,7 +32,7 @@
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.14",
     "semver": "^6.2.0",
-    "ts-morph": "^3.1.0",
+    "ts-morph": "^4.0.0",
     "yargs": "^13.2.4"
   },
   "nyc": {
@@ -68,17 +68,16 @@
     }
   },
   "peerDependencies": {
-    "typescript": "~3.4.5"
+    "typescript": "~3.6.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
     "@types/fs-extra": "^5.1.0",
-    "@types/lodash": "^4.14.132",
-    "@types/node": "^10.14.7",
+    "@types/lodash": "^4.14.138",
+    "@types/node": "^10.14.17",
     "conventional-changelog": "^3.1.3",
     "conventional-changelog-cli": "^2.0.12",
-    "typescript": "~3.4.5",
     "husky": "^1.3.1",
     "istanbul": "^0.4.5",
     "koa": "^2.7.0",
@@ -92,6 +91,7 @@
     "sync-files": "^1.0.3",
     "ts-node": "^8.2.0",
     "typedoc": "^0.14.2",
+    "typescript": "~3.6.2",
     "vue": "^2.6.10"
   }
 }
