--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/max-team/ts2php.git"
+    "url": "https://github.com/searchfe/ts2php.git"
   },
   "author": "meixuguang",
   "contributors": [
