--- a/package.json
+++ b/package.json
@@ -76,9 +76,15 @@
     "@types/fs-extra": "^5.1.0",
     "@types/lodash": "^4.14.132",
     "@types/node": "^10.14.7",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/experimental-utils": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "conventional-changelog": "^3.1.3",
     "conventional-changelog-cli": "^2.0.12",
-    "typescript": "~3.4.5",
+    "eslint": "^6.6.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsdoc": "^17.1.1",
+    "eslint-plugin-no-null": "^1.0.2",
     "husky": "^1.3.1",
     "istanbul": "^0.4.5",
     "koa": "^2.7.0",
@@ -92,6 +98,7 @@
     "sync-files": "^1.0.3",
     "ts-node": "^8.2.0",
     "typedoc": "^0.14.2",
+    "typescript": "~3.4.5",
     "vue": "^2.6.10"
   }
 }
