--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dist: trusty
 language: php
 php:
   - 5.6
+node_js: "10"
 
 env:
   - NOTE_RELEASE=8.x
@@ -41,3 +42,5 @@ deploy:
   node_js: "10"
   install: npm ci
   script: npx semantic-release
+  on:
+    branch: master
