chore:  remove sync-files

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc && mkdir -p dist/runtime && cp src/runtime/*.php dist/runtime && chmod a+x dist/bin/*",
-    "sync": "sync-files -w ./typescript.d.ts ./node_modules/typescript/lib/typescript.d.ts",
+    "sync": "cp ./typescript.d.ts ./node_modules/typescript/lib/typescript.d.ts",
     "test": "mocha",
     "coverage": "nyc _mocha",
     "prepublishOnly": "npm test && npm run build",
@@ -86,6 +86,7 @@
     "@typescript-eslint/experimental-utils": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "camelcase": "^5.3.1",
+    "chalk": "^3.0.0",
     "conventional-changelog": "^3.1.3",
     "conventional-changelog-cli": "^2.0.12",
     "eslint": "^6.6.0",
@@ -104,7 +105,6 @@
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "source-map-support": "^0.5.12",
-    "sync-files": "^1.0.3",
     "ts-node": "^8.2.0",
     "typedoc": "^0.15.3",
     "typescript": "~3.4.5",
