--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsdoc": "^17.1.1",
     "eslint-plugin-no-null": "^1.0.2",
+    "expect": "^25.2.1",
     "glob": "^7.1.6",
     "husky": "^1.3.1",
     "koa": "^2.7.0",
