--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.14",
     "semver": "^6.2.0",
+    "ts-diagnostic-formatter": "^0.1.1",
     "yargs": "^13.2.4"
   },
   "nyc": {
