chore: try esbuild

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc && mkdir -p dist/runtime && cp src/runtime/*.php dist/runtime && chmod a+x dist/bin/*",
+    "build": "tsc && npm run build:runtime",
+    "esbuild": "esbuild src/**/*.ts --platform=node --outdir=dist && npm run build:runtime && npm run build:type",
+    "build:runtime": "mkdir -p dist/runtime && cp src/runtime/*.php dist/runtime && chmod a+x dist/bin/*",
+    "build:type": "tsc --declaration --outDir dist/ --emitDeclarationOnly -p ./",
     "test": "mocha",
     "lint": "eslint src/*.ts",
     "coverage": "nyc _mocha",
@@ -90,6 +93,7 @@
     "chalk": "^3.0.0",
     "conventional-changelog": "^3.1.3",
     "conventional-changelog-cli": "^2.1.0",
+    "esbuild": "^0.8.39",
     "eslint": "^6.6.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsdoc": "^17.1.1",
